# rosbot_patrol_simulation

./: CMakeLists.txt  README.md  instruction.md  package.xml
config/: global_costmap_params.yaml
include/: PatrolManager.h
launch/: amcl_only.launch  darknet_yolo_simulation_only.launch  gmapping_only.launch  move_base_only.launch  rosbot_all_algorithms.launch  rosbot_patrol.launch  simulation_gmapping.launch  simulation_world.launch
maps/: husarion-flat-2.pgm  husarion-flat-2.yaml  rosbot_map.pgm  rosbot_map.yaml
msg/: EspTrigger.msg
params/: room_points.yaml
src/: PatrolManager.cpp  patrol_robot_simulation.cpp  sonar_to_trigger.py
worlds/: husarion_flat_sonar_v2.world  husarion_flat_v3.world  model.world
